add FieldAccess performance test